syntax = "proto3";

package envoy.test.extensions.filters.http.ext_proc.v3;

option java_package = "io.envoyproxy.envoy.test.extensions.filters.http.ext_proc.v3";
option java_outer_classname = "TestAttributeBuilderProto";
option java_multiple_files = true;

// A test attribute builder config. Demonstrates a sample use case of a custom
// attribute builder that remaps attributes.
message TestAttributeBuilderConfig {
  // A map of request attributes to set in the attributes struct.
  // The key is the attribute name, the value is the attribute value,
  // interpretable by CEL. This allows for the re-mapping of attributes.
  map<string, string> mapped_request_attributes = 1;
}
